// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pressable Tests Pressables can change text on press/rest, state rest 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_press_console",
    "ControlType": 50020,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "text",
    "Name": "",
  },
  "Visual Tree": {
    "Comment": "pressable_press_console",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      854,
      20,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Pressables can have delayed event handlers 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_delay_events_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Press Me",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              56,
              19,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          56,
          19,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "pressable_delay_events_button",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      56,
      19,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Pressables can have event handlers 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_feedback_events_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Press Me",
      },
    ],
    "ControlType": 50000,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "pressable feedback events",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              56,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          56,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "pressable_feedback_events_button",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      56,
      18,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Pressables can have hit slop functionality 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_hit_slop_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Press Outside This View",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 0, 0, 255)",
    },
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              146,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          146,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "pressable_hit_slop_button",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      146,
      18,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;
